--- a/HearThis/Info.plist
+++ b/HearThis/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>ne</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>e</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -23,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>6</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -31,6 +27,16 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>MEBOOK cần sử dụng Bộ sưu tập nhạc của bạn</string>
+	<key>NSCameraUsageDescription</key>
+	<string>MEBOOK cần sử dụng Camera của bạn cho việc cập nhật thông tin</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>MEBOOK cần sử dụng Vị trí của bạn cho việc cập nhật thuận tiện</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>MEBOOK cần sử dụng Microphone của bạn cho việc thu âm</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>MEBOOK cần sử dụng Bộ sưu tập của bạn cho việc cập nhật thông tin</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -45,9 +51,20 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleDarkContent</string>
 	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~iphone</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
