--- a/HearThis/GoogleService-Info.plist
+++ b/HearThis/GoogleService-Info.plist
@@ -3,21 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>997758679938-2uv4v6kgcchkaffiscafmt9n68l6u3ob.apps.googleusercontent.com</string>
+	<string>801528320840-s34aed65n81epb23uuu9ad643uotouk8.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.997758679938-2uv4v6kgcchkaffiscafmt9n68l6u3ob</string>
+	<string>com.googleusercontent.apps.801528320840-s34aed65n81epb23uuu9ad643uotouk8</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>801528320840-i8e6c2aeo4733glj2bj8c9odf222ko3v.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD6f_hN-btCPBADlNJXk2TIi4I_acz1kw4</string>
+	<string>AIzaSyDZvGtImpUgGGRnbhrN6v3TnCUvEra96JI</string>
 	<key>GCM_SENDER_ID</key>
-	<string>997758679938</string>
+	<string>801528320840</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>vn.mndd.app</string>
+	<string>com.agri.ebook</string>
 	<key>PROJECT_ID</key>
-	<string>mucnuocdedieu</string>
+	<string>firepush-ca1eb</string>
 	<key>STORAGE_BUCKET</key>
-	<string>mucnuocdedieu.appspot.com</string>
+	<string>firepush-ca1eb.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +31,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:997758679938:ios:76a734341a7f2d53926d9b</string>
+	<string>1:801528320840:ios:6463d6c08542de4cfbd97d</string>
 	<key>DATABASE_URL</key>
-	<string>https://mucnuocdedieu.firebaseio.com</string>
+	<string>https://firepush-ca1eb.firebaseio.com</string>
 </dict>
 </plist>
