--- a/HearThis/Info.plist
+++ b/HearThis/Info.plist
@@ -78,5 +78,21 @@
 	<false/>
 	<key>showAds</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb344485997341684</string>
+				<string>com.googleusercontent.apps.734924855568-hg2lnltoaao0gggb8qjnbqbfo1akqjlm</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>344485997341684</string>
+	<key>FacebookDisplayName</key>
+	<string>MEBOOK</string>
 </dict>
 </plist>
