--- a/HearThis/GoogleService-Info.plist
+++ b/HearThis/GoogleService-Info.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>801528320840-s34aed65n81epb23uuu9ad643uotouk8.apps.googleusercontent.com</string>
+	<string>734924855568-hg2lnltoaao0gggb8qjnbqbfo1akqjlm.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.801528320840-s34aed65n81epb23uuu9ad643uotouk8</string>
+	<string>com.googleusercontent.apps.734924855568-hg2lnltoaao0gggb8qjnbqbfo1akqjlm</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>801528320840-i8e6c2aeo4733glj2bj8c9odf222ko3v.apps.googleusercontent.com</string>
+	<string>734924855568-08aldr7k48fmr8k78h9vdc14kgkfopf5.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDZvGtImpUgGGRnbhrN6v3TnCUvEra96JI</string>
+	<string>AIzaSyANN0vGKfJ363pGQr6nLuZbcpIBBXzOOZk</string>
 	<key>GCM_SENDER_ID</key>
-	<string>801528320840</string>
+	<string>734924855568</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.agri.ebook</string>
 	<key>PROJECT_ID</key>
-	<string>firepush-ca1eb</string>
+	<string>mebook-74079</string>
 	<key>STORAGE_BUCKET</key>
-	<string>firepush-ca1eb.appspot.com</string>
+	<string>mebook-74079.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,8 +31,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:801528320840:ios:6463d6c08542de4cfbd97d</string>
+	<string>1:734924855568:ios:befdb09e60eeb5083b2d95</string>
 	<key>DATABASE_URL</key>
-	<string>https://firepush-ca1eb.firebaseio.com</string>
+	<string>https://mebook-74079.firebaseio.com</string>
 </dict>
 </plist>
