--- a/HearThis/Info.plist
+++ b/HearThis/Info.plist
@@ -46,13 +46,13 @@
 	<key>NSAppleMusicUsageDescription</key>
 	<string>MEBOOK cần sử dụng Bộ sưu tập nhạc của bạn</string>
 	<key>NSCameraUsageDescription</key>
-	<string>MEBOOK cần sử dụng Camera của bạn cho việc cập nhật thông tin</string>
+	<string>MEBOOK cần sử dụng Camera của bạn cho việc cập nhật thông tin của người dùng</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>MEBOOK cần sử dụng Vị trí của bạn cho việc cập nhật thuận tiện</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>MEBOOK cần sử dụng Microphone của bạn cho việc thu âm</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>MEBOOK cần sử dụng Bộ sưu tập của bạn cho việc cập nhật thông tin</string>
+	<string>MEBOOK cần sử dụng Bộ sưu tập của bạn cho việc cập nhật thông tin của người dùng</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
