--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,12 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          repository: https://github.com/tthufo/ASMR.git
+          path: './Music'
+      - name: copying
+        run: cp ./Music/Ads.h .
+
