--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: tthufo/https://github.com/tthufo/ASMR.git
-          path: './Music'
+          repository: tthufo/ASMR
+          path: 'ASMR/Music/'
       - name: copying
-        run: cp ./Music/Ads.h .
+        run: cp ASMR/Music/Ads.h .
 
