--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: tthufo/ASMR
-          path: 'ASMR/Music/'
+          path: 'ASMR'
       - name: copying
-        run: cp Ads.h .
+        run: cp ./Podfile.lock .
 
