--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,8 @@ jobs:
           path: 'Music'
       - name: Checking echo
         run: |
-          cd Music
           ls
-          cp Music/Podfile.lock . && cd .. && ls
+          cp Music/Podfile.lock . && ls
       
 
 
